--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -369,6 +369,7 @@
     "Morocco": "Marruecos",
     "Mozambique": "Mozambique",
     "Myanmar": "Myanmar",
+    "My Orders": "Mis Pedidos",
     "Name": "Nombre",
     "Namibia": "Namibia",
     "Nauru": "Nauru",
