Tarea Final 2 - OrderBy en columnas de Product

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -6,7 +6,7 @@
     "Colors": "Colores",
     "Status": "Estado",
     "Price": "Precio",
-    "CreatedAt": "Fecha de creación",
+    "Created_at": "Fecha creación",
     "Admin": "Administración",
     "White": "Blanco",
     "Blue": "Azul",
